--- a/server/package.json
+++ b/server/package.json
@@ -5,13 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "node server.js"
   },
   "author": "GPA",
   "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^1.12.1"
-  },
   "dependencies": {
     "express": "^4.16.2",
     "mongoose": "^4.13.0"
