Modifying delicacies/activities displaying in each tab and config file with serveur URL and responsive header

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Le gite de tante jeanne",
+  "name": "Bienvenue sur le site de tante jeanne",
   "icons": [
     {
       "src": "favicon.ico",
