--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -7,7 +7,7 @@ ENV NPM_CONFIG_LOGLEVEL warn
 
 # Install and configure `serve`.
 RUN npm install -g serve
-CMD serve -s build
+CMD serve -s build -p 80
 EXPOSE 80
 
 # Install all dependencies of the current project.
