--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     ports: 
       - "27017:27017"
     restart: always
+    volumes:
+      - /usr/local/mongodb/gitetantejeanne:/data/db
   
   server-express:
     build:
